# DEP2022

./: README.md
1-recursion-and-lists/: ChangeLog.md  package.yaml
2-cellular-automata/: ChangeLog.md  README.md  cellular-automata.cabal  package.yaml  stack.yaml
2-cellular-automata/src/: Lib.hs
dep-2021-2022-practica/: README.md
dep-2021-2022-practica/1-recursion-and-lists/: README.md  recursie-lijsten.cabal  stack.yaml
dep-2021-2022-practica/1-recursion-and-lists/app/: Main.hs
dep-2021-2022-practica/1-recursion-and-lists/src/: Lib.hs
dep-2021-2022-practica/2-cellular-automata/app/: Main.hs
dep-2021-2022-practica/2-cellular-automata/src/: Lib.hs
dep-2021-2022-practica/3-decision-trees/: ChangeLog.md  README.ipynb  README.md  decision-tree.cabal  package.yaml  stack.yaml
dep-2021-2022-practica/3-decision-trees/app/: Main.hs
dep-2021-2022-practica/3-decision-trees/src/: Lib.hs
dep-2021-2022-practica/4-parsers-and-ringtones/: CHANGELOG.md  LICENSE  README.md  stack.yaml  synth.cabal
dep-2021-2022-practica/4-parsers-and-ringtones/app/: Main.hs
dep-2021-2022-practica/4-parsers-and-ringtones/src/: Instruments.hs  Parsers.hs  Types.hs
